// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CaptionText should have correct classnames with bold enabled 1`] = `
<div>
  <code
    class="quill-typography__code-text__size--md__weight--bold__decoration--default quill-typography__color--default"
  >
    CaptionText content
  </code>
</div>
`;

exports[`CaptionText should have correct classnames with default values 1`] = `
<div>
  <code
    class="quill-typography__code-text__size--md__weight--regular__decoration--default quill-typography__color--default"
  >
    CodeText content
  </code>
</div>
`;

exports[`CaptionText should have correct classnames with italic enabled 1`] = `
<div>
  <code
    class="quill-typography__code-text__size--md__weight--regular__decoration--italic quill-typography__color--default"
  >
    CaptionText content
  </code>
</div>
`;

exports[`CaptionText should have correct classnames with size lg 1`] = `
<div>
  <code
    class="quill-typography__code-text__size--lg__weight--regular__decoration--default quill-typography__color--default"
  >
    CodeText content
  </code>
</div>
`;

exports[`CaptionText should have correct classnames with size md 1`] = `
<div>
  <code
    class="quill-typography__code-text__size--md__weight--regular__decoration--default quill-typography__color--default"
  >
    CodeText content
  </code>
</div>
`;

exports[`CaptionText should have correct classnames with size sm 1`] = `
<div>
  <code
    class="quill-typography__code-text__size--sm__weight--regular__decoration--default quill-typography__color--default"
  >
    CodeText content
  </code>
</div>
`;

exports[`CaptionText should have correct classnames with size xl 1`] = `
<div>
  <code
    class="quill-typography__code-text__size--xl__weight--regular__decoration--default quill-typography__color--default"
  >
    CodeText content
  </code>
</div>
`;

exports[`CaptionText should have correct classnames with underline enabled 1`] = `
<div>
  <code
    class="quill-typography__code-text__size--md__weight--regular__decoration--underline quill-typography__color--default"
  >
    CaptionText content
  </code>
</div>
`;
